# tienda-api

./: .README.md.swp
.devconatiner/: Dockerfile
.devcontainer/: .env.example  Dockerfile  compose.yml  devcontainer.json  init-command.sh  post-attach.sh  post-create.sh
app/: main.py  models.py  routes.py
docker/: Dockerfile  compose.yml  docker-compose.yml
scripts/ci/: lint.sh  test.sh
scripts/deploy/: start.sh
scripts/localdev/: migrate.sh  start.sh
src/store-api/: pyproject.toml
src/store-api/alembic/: env.py
src/store-api/alembic/versions/: a25ac1fe2bd2_initial_schema.py
src/store-api/app/: database.py  entities.py  main.py  models.py  repositories.py  routes.py
tests/store-api/: conftest.py
tests/store-api/app/: test_routes.py
